# DbDevAgent

./: .gitignore  agent.py  db_sql_server.py  db_sqlite.py  db_tools.py  file_operations.py  pyproject.toml  read_me.txt
config/: agent.md  tools.yaml
scripts/: TestDB_SQLServer.sql  TestDB_SQLite.sql
tests/: test_db_sql_server_tools.py  test_db_sqlite_tools.py  test_file_operations.py
