
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "database-agent"
version = "1.0.1"
dependencies = ["anthropic","openai","pyodbc","python-dotenv","pyyaml"]
description = "Agent for database development"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]